--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JavaScript Quiz</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+  <div>
+    <H1>Javascript Quiz</H1>
+    <button id="start-btn"> Start</button>
+  </div>
+
   
 </body>
 </html>
