added choice layout

--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   <div>
-    <H1>Javascript Quiz</H1>
+    <h1>Javascript Quiz</h1>
     <button id="start-btn"> Start</button>
   </div>
 
-  
+  <div id="quiz-container">
+    <h2 id="question-line"></h2>
+    <ol id="answer-choices"></ol>
+  </div>
+
 </body>
 </html>
