Added timer and JS layout

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <button id="start-btn"> Start</button>
   </div>
 
+  <div id="timer">Time</div>
   <div id="quiz-container">
     <h2 id="question-line"></h2>
     <ol id="answer-choices"></ol>
