started score html page

--- a/Index.html
+++ b/Index.html
@@ -18,5 +18,11 @@
     <ol id="answer-choices"></ol>
   </div>
 
+  <div>
+    <h1>Finished</h1>
+    <h2>Score: </h2>
+    <input type="text">
+    <button></button>
+  </div>
 </body>
 </html>
