added text to submit button

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <h1>Finished</h1>
     <h2>Score: </h2>
     <input type="text">
-    <button></button>
+    <button class="submit-btn">Submit, New Developer!</button>
   </div>
 </body>
 </html>
