--- a/Index.html
+++ b/Index.html
@@ -15,14 +15,16 @@
   <div id="timer">Time</div>
   <div id="quiz-container">
     <h2 id="question-line"></h2>
-    <ol id="answer-choices"></ol>
+    <ul id="answer-choices"></ul>
   </div>
 
   <div>
-    <h1>Finished</h1>
-    <h2>Score: </h2>
+    <h2>Finished</h2>
+    <p>Score: </p>
     <input type="text">
     <button class="submit-btn">Submit, New Developer!</button>
   </div>
+
+  <script src="Script.js"></script>
 </body>
 </html>
