added initials input to html

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 <body>
   <div id="title">
     <h1>Javascript Quiz</h1>
+    <h2 id="last-try"></h2>
     <button id="start-btn"> Start</button>
   </div>
   
@@ -21,7 +22,7 @@
   <div id="end-screen" style="display: none">
     <h2>Finished</h2>
     <p id="end-score">Score: </p>
-    <input type="text">
+    <input type="text" id="initials-input">
     <button id="submit-btn">Submit, New Developer!</button>
   </div>
 
